# forgeflow

./: .editorconfig  .flake8  .gitignore  Baek_Carrer.md  DEPLOYMENT_CHECK.md  FORGEFLOW_AI_PROMPT_GUIDE.md  ForgeFlow_MasterPlan.md  LLM_Prompt_보안강화.md  README.md  Wizard_Admin_Prompt.md  build.ps1  create_degisn_doc_template.py  create_design_doc_template.py  create_manual_template.py  create_test_plan_template.py  deploy.ps1  design_Token.json  docker-compose.yml  forgeFlowGoal.md  forgeflow_ai_platform_20251204014728.pptx  package-lock.json  package.json  requirements-test.txt  test-menus.csv  test_gemini.py
backend/: .dockerignore  .env.example  Dockerfile  env.example.txt  main.py  requirements.txt  setup.cfg
backend/migrations/: 004_create_n8n_db.sql  005_add_wizard_data_to_screens.sql  006_add_document_columns.sql  add_generation_tracking.sql  init.sql  init.sql.bak
backend/models/: __init__.py  database.py  feedback.py  menu.py  resource.py  screen.py  wizard_test_result.py
backend/routers/: __init__.py  ai.py  cache.py  menus.py  resources.py  screens.py
backend/schemas/: __init__.py  ai.py  feedback.py  menu.py  resource.py  screen.py
backend/scripts/: seed_resources.py
backend/services/: __init__.py  ai_service.py  cache_service.py  document_service.py  gemini_client.py
backend/static/: index.html
backend/static/assets/: index-B1PcJpho.js  index-B9NZGIlj.css  (+15 more)
backend/templates/: design_spec_template.docx  test_plan_template.docx  user_manual_template.docx
backend/utils/: __init__.py  csv_parser.py  doc_prompts.py  prompt_templates.py
(+87 files in other folders)
