[metadata]
name = forgeflow-backend
version = 1.0.0

[options]
python_requires = >=3.10

[tool:pytest]
python_files = test_*.py
python_classes = Test*
python_functions = test_*

[flake8]
max-line-length = 120
exclude = .git,__pycache__,venv,node_modules
encoding = utf-8

[pycodestyle]
max-line-length = 120
encoding = utf-8

[isort]
profile = black
line_length = 120

